--- a/src/app/repair-fee/repair-fee.component.html
+++ b/src/app/repair-fee/repair-fee.component.html
@@ -1,7 +1,8 @@
 <body>
     <div>
-        <h1 class="airconrepair">Repair Fee</h1>
-        <h2 class="airconfee">Checkup Fee: Php 200</h2>
+        <mat-icon class="cancelBtn">cancel</mat-icon>
+        <h2 class="airconfee">Checkup Fee</h2>
+        <h2 class="airconfee2">Php 200</h2>
         <p class="aircondescrip">Technician diagnoses the problem
             and quotes you a final repair price. No hidden or extra fees.</p>
         <p class="aircondescrip2">If you decide to proceed with the repair,
@@ -13,5 +14,7 @@
         <h1 class="repairservice1">
             <mat-icon class="text_icon"><b>done</b></mat-icon> Full on-site repair quotation
         </h1>
+
+        
     </div>
 </body>
