--- a/src/app/aircondetails/aircondetails.component.css
+++ b/src/app/aircondetails/aircondetails.component.css
@@ -1,135 +1,92 @@
 @media (min-width: 820px)
 {
-.sidenav-container {
-  height: 100%;
-}
-
-.sidenav{
-  width: fit-content;
-  width: 280px;
-  background-color: #EAE2B7;
-}
-
-.mat-sidenav-content{
-   height: 910px;
-   background-color: white;
-}
-
-.mat-toolbar{
-  background-color: #D62828;
-  width: 100%;
-}
-
-.logo{
-  width: 60%;
-  height: 18%;
-  margin-left: 60px;
-}
-
-.nav-icon{
-  color: #003049;
-  font-size: 35px;
-  margin-left: 25px;
-  margin-top: -12px;
-}
-
-.dashboardside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.dashboardside:hover
-{
-    background-color: #c8c19c;
-    
+  mat-toolbar
+  {
     width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
+    height: 10%;
+  }
+  
+  .logo
+  {
+       max-width: 200px;
+       height: 100px !important;
+       margin-left: 30px !important;
+       margin-top: 20px !important;
+  }
+  
+  .homeBtn
+  {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin: 30px;
+    margin-left: 80px;
+    margin-top: 40px;
+  }
+  
+  .homeBtn:hover, .homeBtn:active {
+    color:#dd0346;
+  }
+  
+  .menuBtn
+  {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #003049;
+      font-size: 17px;
+      float: left;
+      margin: 30px;
+      margin-top: 40px;
+  }
+  
+  .menuBtn:hover, .menuBtn:active {
+      color:#dd0346;
+  }
+  
+  .pricingBtn
+  {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #003049;
+      float: left;
+      margin: 30px;
+      margin-top: 40px;
+      font-size: 17px;
+      
+  }
+  
+  
+  .pricingBtn:hover, .pricingBtn:active {
+      color:#dd0346;
+  }
+  
+  .contactUsBtn
+  {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #003049;
+      font-size: 17px;
+      float: left;
+      margin: 30px;
+      margin-top: 40px;
+  }
+  
+  .contactUsBtn:hover, .contactUsBtn:active {
+      color:#dd0346;
+  }
+  
+  .aboutusBtn
+  {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #003049;
+      font-size: 17px;
+      float: left;
+      margin: 30px;
+      margin-top: 40px;
+  }
+  
+  .aboutusBtn:hover, .aboutusBtn:active {
+      color:#dd0346;
+  }
 
-.dashboard-btn{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-  text-decoration: none;
-}
-
-.bookingside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.bookingside:hover
-{
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.booking-btn{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-}
-
-.profileside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.profileside:hover
-{
-    background-color: #c8c19c;
-    
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.profile-btn
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-}
-
-.logoutside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.logoutside:hover
-{
-    background-color: #c8c19c;
-    
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.logout-btn
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-}
 
 .spacer{
   flex: 1 1 auto;
@@ -210,28 +167,6 @@ color: #FFFFFF;
     font-family: 'Trebuchet MS';
     width: fit-content;
   }
-  .nextBtn
-  {
-    font-size: 18px;
-    font-family: 'Trebuchet MS';
-    background-color: #D62828;
-      color: #FFFFFF;
-    width: 100px;
-    height: 50px;
-    margin-top: 25px;
-    float: right;
-  }
-  .backBtn
-  {
-    font-size: 18px;
-    font-family: 'Trebuchet MS';
-    background-color: #D62828;
-    color: #FFFFFF;
-    width: 100px;
-    height: 50px;
-    margin-top: 25px;
-    float: left;
-  }
 
   .viewprice
   {
@@ -256,7 +191,7 @@ p
 
 .priceBtn
 {
-  background-color: #003049;
+  background-color: #590D22;
   color: #FFFFFF;
   font-size: 13px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -427,27 +362,31 @@ p
     font-family: 'Trebuchet MS';
   }
   
-  .CDbackBtn
+  .backBtn
   {
-    margin-top: 30px;
-    font-size: 18px;
+    margin-top: 30px !important;
+    float: left !important;
+    margin-left: 10px !important;
+    font-size: 17px;
     font-family: 'Trebuchet MS';
-    background-color: #D62828;
-    color: #FFFFFF;
-    width: 100px;
-    height: 50px;
-    float: left;
+    border-color: #dd0346 !important;
+    color: #a4133c;
+    width: 100px !important;
+    height: 50px !important;
+    
   }
   
-  .CDnextBtn
+  .nextBtn
   {
     margin-top: 30px;
     font-size: 18px;
     font-family: 'Trebuchet MS';
-    background-color: #D62828;
-    color: #FFFFFF;
-    width: 100px;
-    height: 50px;
+    border-style: solid;
+    border-width: thin;
+    border-color: #dd0346 !important;
+    color: #a4133c !important;
+    width: 100px !important;
+    height: 50px !important;
     float: right;
   }
   
@@ -456,7 +395,7 @@ p
     margin: auto;
     margin-top: 40px;
     width: 800px;
-    height: 350px;
+    height: 410px;
   }
   
   .schedicon
@@ -469,7 +408,7 @@ p
   .servicesched
   {
     color: #14213D;
-    margin-top: -33px;
+    margin-top: -35px;
     margin-left: 50px;
     font-size: 25px;
     font-family: 'Trebuchet MS';
@@ -479,8 +418,8 @@ p
   {
     margin-top: -10px;
     margin-left: 550px;
-    border-color: #FCA311;
-    height: 50px;
+    border-color: #a4133c;
+    height: 70px;
     width: 200px;
     font-family: 'Trebuchet MS';
   }
@@ -509,6 +448,7 @@ p
   {
    font-size: 12px;
    font-family: 'Trebuchet MS';
+   color: #a4133c;
   }
   
   .listicon
@@ -539,8 +479,8 @@ p
     margin-top: 30px;
     font-size: 18px;
     font-family: 'Trebuchet MS';
-    background-color: #F77F00;
-    color: #14213D;
+    background-color: #590D22;
+    color: #FFFFFF;
     width: 100px;
     height: 50px;
     float: right;
@@ -556,10 +496,10 @@ p
   {
     
     margin-left: 20px;
-    background-color: #D62828;
-      color: #FFFFFF;
+    background-color: #a4133c;
+    color: #FFFFFF;
     height: 52px;
-    font-size: 18px;
+    font-size: 16px;
     font-family: 'Trebuchet MS';
   }
   .timeslots
@@ -568,7 +508,7 @@ p
   }
   .timeslot
   {
-    margin-top:-50px;
+    margin-top: -55px;
     float: right;
     margin-right: 75px;
     font-size: 18px;
