--- a/src/app/appliances/appliances.component.html
+++ b/src/app/appliances/appliances.component.html
@@ -1,56 +1,25 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-      *ngIf="isHandset$ | async">
-      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-    </button>
-    <br>
-    <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-    <mat-nav-list class="nav-list">
-      <div class="dashboardside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-          <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
-        </mat-list-item>
-      </div>
-      <div class="bookingside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
-          <a class="booking-btn" routerLink="/booking">Book a Service</a>
-        </mat-list-item>
-      </div>
-      <div class="profileside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-          <a class="profile-btn" routerLink="/profile">Profile</a>
-        </mat-list-item>
-      </div>
+<mat-toolbar>
+  <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
+        <label class="homeBtn" routerLink="/dashboard">Home</label>
+        <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label> 
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+              <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+              <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+              <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+              <button mat-menu-item routerLink="/menu_tv">Television</button>
+            </mat-menu>
 
-      <div class="logoutside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon">exit_to_app</mat-icon>
-          <a class="logout-btn" (click)="logout()">Logout</a>
-        </mat-list-item>
-      </div>
+            <label class="pricingBtn" routerLink="/pricing">Pricing</label>
+            <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
+            <label class="aboutusBtn" routerLink="/about_us">About Us</label>      
+</mat-toolbar> 
 
-    </mat-nav-list>
-  </mat-sidenav>
-
-  <mat-sidenav-content>
-    <mat-toolbar>
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <h1 class="ayosgamit">Ayosgamit</h1>
-      <span class="spacer"></span>
-    </mat-toolbar>
     <h1 class="backBtn" routerLink="/booking">
-      <mat-icon class="returnIcon"><b>keyboard_return</b></mat-icon>Back to Services
+      <mat-icon class="backicon">chevron_left</mat-icon>
     </h1>
     <h1 class="h1title">Appliance to Repair</h1>
-    <hr>
+
     <div class="allservices">
       <mat-card class="airconcard">
         <mat-card-content>
@@ -93,5 +62,3 @@
       </mat-card>
     </div>
 
-  </mat-sidenav-content>
-</mat-sidenav-container>
