--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -58,29 +58,33 @@
 
     </mat-toolbar>
 
+    
   <div>
     <mat-card class="customerinfo">
       <div class="table">
         <table>
           <thead>
             <tr>
-              <th scope="col" class="header1">Full Name</th>
-              <th scope="col" class="header1">Contact Number</th>
-              <th scope="col" class="header1">Email</th>
-              <th scope="col" class="header1">Address</th>
+              <th scope="col" class="header">Full Name</th>
+              <th scope="col" class="header">Contact Number</th>
+              <th scope="col" class="header">Email</th>
+              <th scope="col" class="header">Address</th>
+              
             </tr>
           </thead>
           <tbody class="body">
             <tr>
-              <td>{{fname}} {{lname}}</td>
-              <td>{{number}}</td>
-              <td>{{email}}</td>
-              <td>{{address}}</td>
+              <td class="content1">Famela Buenaobra</td>
+              <td class="content1">09676428307</td>
+              <td class="content1">famela0201@gmail.com</td>
+              <td class="content1"></td>
             </tr>
           </tbody>
         </table>
         </div>
     </mat-card>
+
+    <img class="customervector" mat-card-image src="../../assets/customervector.png">
   </div>
     
 
