--- a/src/app/aircondetails/aircondetails.component.html
+++ b/src/app/aircondetails/aircondetails.component.html
@@ -263,7 +263,7 @@
               <!--Geolocation-->
               <div id="mapid"></div>
               <div>
-                <h1 class="h1address">Move map to exact location under the red pin.</h1>
+                <!-- <h1 class="h1address">Move map to exact location under the red pin.</h1> -->
                 <mat-form-field class="address" appearance="outline">
                   <mat-label>Service Address</mat-label>
                   <input matInput formControlName="service_address" [errorStateMatcher]="matcher" autocomplete="off">
