--- a/src/app/appliances/appliances.component.html
+++ b/src/app/appliances/appliances.component.html
@@ -17,6 +17,7 @@
 
     <h1 class="backBtn" routerLink="/booking">
       <mat-icon class="backicon">chevron_left</mat-icon>
+      <label class="backtxt">Back</label>
     </h1>
     <h1 class="h1title">Appliance to Repair</h1>
 
