--- a/src/app/bookingform/bookingform.component.html
+++ b/src/app/bookingform/bookingform.component.html
@@ -13,8 +13,7 @@
             <label class="pricingBtn" routerLink="/pricing">Pricing</label>
             <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
             <label class="aboutusBtn" routerLink="/about_us">About Us</label>
-            
-                    
+            <label class="aboutusBtn" routerLink="/dashboard">My Account</label>          
   </mat-toolbar>   
 
     
