--- a/src/app/bookingsummary/bookingsummary.component.html
+++ b/src/app/bookingsummary/bookingsummary.component.html
@@ -1,42 +1,46 @@
 <mat-toolbar>
-  
+
   <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
 
-  <label class="homeBtn" routerLink="/dashboard">Home</label>  
-        <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label> 
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
-              <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
-              <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
-              <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
-              <button mat-menu-item routerLink="/menu_tv">Television</button>
-            </mat-menu>
+  <label class="homeBtn" routerLink="/dashboard">Home</label>
+  <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+    <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+    <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+    <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+    <button mat-menu-item routerLink="/menu_tv">Television</button>
+  </mat-menu>
 
-            <label class="pricingBtn" routerLink="/pricing">Pricing</label>
-            <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
-            <label class="aboutusBtn" routerLink="/about_us">About Us</label>    
-            
-</mat-toolbar> 
-   
-  
+  <label class="pricingBtn" routerLink="/pricing">Pricing</label>
+  <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
+  <label class="aboutusBtn" routerLink="/about_us">About Us</label>
+  <span class="spacer"></span>
+  <button mat-raised-button (click)="getConfirmation()" class="cancelBtn">Cancel Request</button>
+
+</mat-toolbar>
 <mat-card class="summary">
   <div>
     <mat-icon class="icon">description<h1 class="title">Request Summary</h1>
     </mat-icon>
   </div>
-  
+
   <table class="table">
     <thead>
       <tr>
-        <th class="header1">First Name <mat-icon class="editicon">edit</mat-icon></th>
-        <th class="header1">Last Name <mat-icon class="editicon">edit</mat-icon></th>
-        <th class="header1">Contact Number <mat-icon class="editicon">edit</mat-icon></th>
-        <th class="header1">Address <mat-icon class="editicon">edit</mat-icon></th>
+        <th class="header1">First Name <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+        <th class="header1">Last Name <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+        <th class="header1">Contact Number <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+        <th class="header1">Address <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td class="body1">Famela</td>
+        <td class="body1">{{service.service_firstname}}</td>
         <td class="body1">{{service.service_lastname}}</td>
         <td class="body1">{{service.service_phoneNumber}}</td>
         <td class="body1">{{service.service_address}}</td>
@@ -44,10 +48,14 @@
     </tbody>
     <thead>
       <tr>
-        <th class="header2">Address Details <mat-icon class="editicon">edit</mat-icon></th>
-        <th class="header2">City <mat-icon class="editicon">edit</mat-icon></th>
-        <th class="header2">Property Type <mat-icon class="editicon">edit</mat-icon></th>
-        <th class="header2">Baranggay <mat-icon class="editicon">edit</mat-icon></th>
+        <th class="header2">Address Details <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+        <th class="header2">City <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+        <th class="header2">Property Type <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+        <th class="header2">Baranggay <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -55,40 +63,44 @@
         <td class="body2">Blk 16</td>
         <td class="body2">{{service.service_city}}</td>
         <td class="body2">{{service.service_property_type}}</td>
-        <td class="body2">{{service.service_zipcode}}</td>
+        <td class="body2">{{service.service_barangay}}</td>
       </tr>
     </tbody>
-   
-     
-      <thead>
-        <tr>
-          <th class="header4">Unit Problem <mat-icon class="editicon">edit</mat-icon></th>
-          <th class="header4">Scheduled Date <mat-icon class="editicon">edit</mat-icon></th>
-          <th class="header4">Time Slot <mat-icon class="editicon">edit</mat-icon></th>
-          <th class="header4">Instruction <mat-icon class="editicon">edit</mat-icon></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="body4">{{service.service_unitProb}}</td>
-          <td class="body4">{{service.service_date | date}}</td>
-          <td class="body4">{{service.service_timeslot}}</td>
-          <td class="body4">{{service.service_instruction}}</td>
-        </tr>
-      </tbody>
 
-      <thead>
-        <tr>
-          <th class="header4">Instruction <mat-icon class="editicon">edit</mat-icon></th>
-        </tr>
-      </thead>
+    <thead>
+      <tr>
+        <th class="header4">Unit Problem <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+        <th class="header4">Scheduled Date <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+        <th class="header4">Time Slot <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+        <th class="header4">Instruction <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="body4">{{service.service_unitProb}}</td>
+        <td class="body4">{{service.service_date | date}}</td>
+        <td class="body4">{{service.service_timeslot}}</td>
+        <td class="body4">{{service.service_instruction}}</td>
+      </tr>
+    </tbody>
 
-      <tbody>
-        <tr>
-          <td class="body4">{{service.service_instruction}}</td>
-        </tr>
-      </tbody>
-   </table>
+    <thead>
+      <tr>
+        <th class="header4">Instruction <mat-icon class="editicon" [routerLink]="['/summary-edit/' + service._id]">edit</mat-icon>
+        </th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td class="body4">{{service.service_instruction}}</td>
+      </tr>
+    </tbody>
+  </table>
 </mat-card>
 
 <mat-card class="summary2">
@@ -99,7 +111,7 @@
         <th class="header3">Appliance</th>
         <th class="header3">Service</th>
         <th class="header3">Unit Type</th>
-        <th class="header3">Price</th>
+        <th class="price">Price</th>
       </tr>
     </thead>
 
@@ -108,37 +120,47 @@
         <td class="body3">{{service.service_appliance}}</td>
         <td class="body3">{{service.service_type}}</td>
         <td class="body3">{{service.service_unitType}}</td>
-        <td class="body3">{{service.service_unitType}}</td>
+        <td class="price1">
+          &#8369;{{service.checkupfee}}.00
+          <div *ngIf="service.installfee != null; then install else install1"></div>
+          <ng-template #install> + &#8369;{{service.installfee}}.00</ng-template>
+          <ng-template #install1></ng-template>
+          <div *ngIf="service.cleaningfee != null; then cleaning else cleaning1"></div>
+          <ng-template #cleaning> + &#8369;{{service.cleaningfee}}.00</ng-template>
+          <ng-template #cleaning1></ng-template>
+          <div *ngIf="service.unitfee != null; then unit else unit1"></div>
+          <ng-template #unit> + &#8369;{{service.unitfee}}.00</ng-template>
+          <ng-template #unit1></ng-template>
+        </td>
       </tr>
     </tbody>
-    </table>
+  </table>
 
-<div>
-  <h1 class="totaltxt"><b>Total: </b></h1>
-</div>
+  <!-- <div>
+    <h1 class="totaltxt"><b>Total:
+        <div *ngIf="service.installfee != null && service.unitfee != null; else totalinstall1">
+          {{installtotal}}
+        </div>
+        <ng-template #totalinstall1>
+          {{installtotal1}}
+        </ng-template>
+
+        <div *ngIf="service.cleaningfee != null && service.unitfee == null; else totalcleaning1">
+          {{cleaningtotal1}}
+        </div>
+        <ng-template #totalcleaning1>
+          {{cleaningtotal}}
+        </ng-template>
+      </b></h1>
+  </div> -->
+
 </mat-card>
-   
-<div class="termschkbox">
-  <mat-checkbox [(ngModel)]="checked">I agree to Ayosgamit<b> Terms & Conditions.</b></mat-checkbox>
-</div>
 
-<div>
-<button  class="submitBtn" mat-raised-button>SUBMIT</button>
-</div>
 <div class="termschkbox">
   <mat-checkbox #confirmed>I agree to Ayosgamit <b>Terms and Conditions.</b></mat-checkbox>
 </div>
 
-<!-- <div *ngIf="!confirmed.checked; then disable else enable"></div>
-  <ng-template #disable><button mat-stroked-button class="proceedBtn-disabled"  routerLink="/payment" [disabled]="!confirmed.checked">Proceed</button></ng-template>
-  <ng-template #enable><button mat-raised-button class="proceedBtn" routerLink="/payment">Proceed</button></ng-template> -->
-   
-   
-
-    
- 
-
-    
-      
-    
-
+<div *ngIf="!confirmed.checked; then disable else enable"></div>
+<ng-template #disable><button mat-stroked-button class="submitBtn-disabled" routerLink="/payment"
+    [disabled]="!confirmed.checked">Proceed</button></ng-template>
+<ng-template #enable><button mat-raised-button class="submitBtn" routerLink="/payment">Proceed</button></ng-template>
