--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -224,8 +224,8 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 .customerinfo
 {
-  width: 1100px;
-  height: 150px;
+  width: 1000px;
+  height: fit-content;
   margin-left: 50px;
   margin-top: 20px;
 }
