--- a/src/app/repair-fee/repair-fee.component.html
+++ b/src/app/repair-fee/repair-fee.component.html
@@ -1,6 +1,6 @@
 <body>
     <div>
-        <mat-icon class="cancelBtn">cancel</mat-icon>
+        <mat-icon class="cancelBtn" mat-dialog-close>cancel</mat-icon>
         <h2 class="airconfee">Checkup Fee</h2>
         <h2 class="airconfee2">Php 200</h2>
         <p class="aircondescrip">Technician diagnoses the problem
