--- a/src/app/reschedule/reschedule.component.html
+++ b/src/app/reschedule/reschedule.component.html
@@ -51,7 +51,7 @@
         </div>
 
         <div>
-          <button mat-stroked-button class="backBtn" >Back</button>
+          <button mat-stroked-button class="backBtn" routerLink="/dashboard">Back</button>
           <button mat-raised-button class="reschedBtn" type="submit" [disabled]="!scheduleForm.valid">Reschedule
             Request</button>
         </div>
